--- a/desafios/desafio012/style/style.css
+++ b/desafios/desafio012/style/style.css
@@ -1,13 +1,25 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, tahoma, sans-serif;
+    --fonte2:"Passion One", cursive;
+    --fonte3: "Sriracha", cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     min-width: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -16,9 +28,11 @@ header{
     text-align: center;
 }
 
-header > h1{
+header > h1 {
 padding-top: 50px;
 font-variant: small-caps;
+font-family: var(--fonte2);
+font-size: 10vw;
 }
 
 header > p{
@@ -40,6 +54,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -55,6 +71,8 @@ section.imagem{
 section.imagem > p{
     width: 400px;
     background-color: rgb(0, 0, 0, 253);
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
